fix: resolve url obrigatória error, make scraper async and add job status endpoints